Endpoints to get labs by user and roles
